--- a/modeling/sections/analysis.tex
+++ b/modeling/sections/analysis.tex
@@ -3,7 +3,7 @@ In this section, we solve \cref{eq:mathmodelsimppend}.
 
 
 \subsection{Non-dimensionalization}
-The independent quantity is $t$, the dependent quantity $\angpos$ and the parameters are $\angpos_0$, $\length$ and $\grav$. Since $\angpos$ is already dimensionless, non-dimensionalize $t$ to $\scpq t$ by using $\kdim_3$ as scaling factor:
+The independent quantity is $t$, the dependent quantity $\angpos$ and the parameters are $\angpos_0$, $\length$ and $\grav$. Since $\angpos$ is already dimensionless, non-dimensionalize $t$ to the dimensionless time $\scpq t$ by using $\kdim_3$ as scaling factor, a characteristic time:
 \beq
 \scpq t = \kdim_3 
         = t\sqrt{\dfrac{\grav}{\length}}\implies
