typos and editing

--- a/approximations/approximations.tex
+++ b/approximations/approximations.tex
@@ -9,13 +9,14 @@
 \begin{document}
 \input{./sections/abstract}
 \maketitle
-\tableofcontents
+%\tableofcontents
 
 \input{./sections/pressure}
+\input{./sections/energy}
 
 %\appendix
 
-%\bibliographystyle{plainnat}
-%\bibliography{./sections/biblio}
+\bibliographystyle{plainnat}
+\bibliography{./sections/biblio}
 
 \end{document}
