--- a/approximations/preambule/docinfo.tex
+++ b/approximations/preambule/docinfo.tex
@@ -1,6 +1,6 @@
 %%% Document information
 \author[DH]{Diego Herrera}
-\title[Modeling]{Mathematical Modeling for Physical Sciences}
+\title[Approx.]{Approximations}
 \date{\today}
 % no CSV in keywords
 \keywords{mathematical modeling}
@@ -16,4 +16,4 @@
 \makeatother
 
 %%% Draft and versioning
-\renewcommand{\PrelimWords}{[Modeling -- DH -- v. 1.0.0]}
+\renewcommand{\PrelimWords}{[Approx. -- DH -- v. 1.0.0]}
