--- a/approximations/preambule/rmbdarticle.sty
+++ b/approximations/preambule/rmbdarticle.sty
@@ -14,7 +14,7 @@
 \RequirePackage{microtype}
 %\RequirePackage{multicol}
 %\RequirePackage{multirow}
-%\RequirePackage[numbers]{natbib}
+\RequirePackage[numbers]{natbib}
 \RequirePackage[draft, scrtime]{prelim2e}            % Final and draft versions
 \RequirePackage{siunitx}
 \RequirePackage{tabularx}
