--- a/approximations/sections/biblio.bib
+++ b/approximations/sections/biblio.bib
@@ -2,242 +2,19 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2012-09-27 21:56:56 +0200 
+%% Created for art at 2013-10-28 12:16:41 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@phdthesis{mahajan1998,
-	Author = {Sanjoy Mahajan},
-	Date-Added = {2012-09-27 19:56:03 +0000},
-	Date-Modified = {2012-09-27 19:56:54 +0000},
-	School = {California Institute of Technology},
-	Title = {Order of Magnitude Physics A Textbook with Applications to the Retinal Rod and to the Density of Prime Numbers},
-	Year = {1998}}
-
-@book{sonin2001,
-	Author = {Ain A. Sonin},
-	Date-Added = {2012-09-27 07:44:07 +0000},
-	Date-Modified = {2012-09-27 07:45:51 +0000},
-	Publisher = {Department of Mechanical Engineering, Massachusetts Institute of Technology},
-	Title = {The Physical Basis of Dimensional Analysis},
-	Year = {2001}}
-
-@article{sonin2008,
-	Author = {Ain A. Sonin},
-	Date-Added = {2012-09-27 07:41:10 +0000},
-	Date-Modified = {2012-09-27 07:43:17 +0000},
-	Journal = {Procedures of the National Academy of Science, USA},
-	Month = {June 8},
-	Number = {23},
-	Pages = {8525-6},
-	Title = {A generalization of the pi-theorem and dimensional analysis},
-	Volume = {101},
-	Year = {2008}}
-
-@book{si2006,
-	Author = {Bureau International des Poids et Mesures},
-	Date-Added = {2012-09-27 07:35:51 +0000},
-	Date-Modified = {2012-09-27 07:39:14 +0000},
-	Edition = {8th edition},
-	Publisher = {Bureau International des Poids et Mesures},
-	Title = {The International System of Units (SI)},
-	Year = {2006}}
-
-@book{greenbook2008,
-	Author = {E.R. Cohen and T. Cvitas and J.G. Frey and B. Holmstr{\"o}m and K. Kuchitsu and R. Marquardt and I. Mills and F. Pavese and M. Quack and J. Stohner and H.L. Strauss and M. Takami and A.J. Thor},
-	Date-Added = {2012-09-27 07:26:31 +0000},
-	Date-Modified = {2012-09-27 07:33:20 +0000},
-	Edition = {3rd Edition, 2nd Printing},
-	Publisher = {IUPAC and RSC Publishing, Cambridge},
-	Title = {Quantities, Units and Symbols in Physical Chemistry},
-	Year = {2008}}
-
-@book{marsden2003,
-	Author = {Jerrold E. Marsden and Anthony J. Tromba},
-	Date-Added = {2012-09-18 22:59:33 +0000},
-	Date-Modified = {2012-09-18 23:03:04 +0000},
-	Edition = {Fifth},
-	Publisher = {W. H. Freeman and Company},
-	Title = {Vector Calculus},
-	Year = {2003}}
-
-@book{holzbecher2007,
-	Author = {Ekkehard Holzbecher},
-	Date-Added = {2012-09-18 21:04:26 +0000},
-	Date-Modified = {2012-09-18 21:05:58 +0000},
-	Publisher = {Springer},
-	Title = {Environmental Modeling -- Using Matlab},
-	Year = {2007}}
-
-@booklet{hestenes1998,
-	Address = {\url{http://geocalc.clas.asu.edu/html/NFMP.html}},
-	Author = {David Hestenes},
-	Date-Added = {2012-09-11 07:15:58 +0000},
-	Date-Modified = {2012-09-14 08:35:42 +0000},
-	Howpublished = {on-line},
-	Title = {New Foundations for Mathematical Physics},
-	Year = {1998}}
-
-@booklet{suter2003,
-	Author = {Jaap Suter},
-	Date-Added = {2012-09-10 11:32:39 +0000},
-	Date-Modified = {2012-09-10 11:33:45 +0000},
-	Howpublished = {on-line},
-	Month = {March},
-	Title = {Geometric Algebra Primer},
-	Year = {2003}}
-
-@book{mahajan2012,
-	Author = {Sanjoy Mahajan},
-	Date-Added = {2012-09-08 20:09:45 +0000},
-	Date-Modified = {2012-09-08 20:10:43 +0000},
-	Publisher = {The MIT Press},
-	Title = {Street-Fighting Mathematics: The Art of Educated Guessing and Opportunistic Problem Solving},
-	Year = {2010}}
-
-@book{thorne2011,
-	Author = {Roger D. Blandford and Kip S. Thorne},
-	Date-Added = {2012-09-07 18:37:55 +0000},
-	Date-Modified = {2012-09-07 18:39:11 +0000},
-	Month = {September},
-	Publisher = {California Institute of Technology},
-	Title = {Applications of Classical Physics},
-	Year = {2011}}
-
-@article{hestenes2003,
-	Author = {David Hestenes},
-	Date-Added = {2012-09-07 15:15:28 +0000},
-	Date-Modified = {2012-09-07 15:16:57 +0000},
-	Journal = {American Journal of Physics},
-	Month = {June},
-	Number = {6},
-	Title = {Spacetime Physics with Geometric Algebra},
-	Volume = {71},
-	Year = {2003}}
-
-@webpage{bakerespace,
-	Author = {Martin John Baker},
-	Date-Added = {2012-09-06 12:52:00 +0000},
-	Date-Modified = {2012-09-06 12:52:00 +0000},
-	Lastchecked = {2012-09-03},
-	Month = {09},
-	Title = {Maths - Euclidean Space},
-	Url = {http://www.euclideanspace.com/maths/geometry/space/euclidean/index.htm},
-	Urldate = {2012},
-	Year = {2012},
-	Bdsk-Url-1 = {http://www.euclideanspace.com/maths/geometry/space/euclidean/index.htm}}
-
-@book{hestenes2002,
-	Author = {David Hestenes},
-	Date-Added = {2012-09-06 10:20:45 +0000},
-	Date-Modified = {2012-09-06 10:22:18 +0000},
-	Edition = {Second},
-	Publisher = {Kluwer Academic Publishers},
-	Title = {New Foundations for Classical Mechanics (Fundamental Theories of Physics)},
-	Year = {2002}}
-
-@book{hestenes1987,
-	Author = {David Hestenes and Garret Sobczyk},
-	Date-Added = {2012-09-06 10:17:13 +0000},
-	Date-Modified = {2012-09-06 10:19:19 +0000},
-	Publisher = {Reidel Publishing Company},
-	Title = {Clifford Algebra to Geometric Calculus: A Unified Language for Mathematics and Physics (Fundamental Theories of Physics)},
-	Year = {1987}}
-
-@webpage{bakerbasis,
-	Author = {Martin John Baker},
-	Date-Added = {2012-09-03 13:29:29 +0000},
-	Date-Modified = {2012-09-06 12:52:40 +0000},
-	Lastchecked = {2012-09-12},
-	Month = {09},
-	Title = {Maths - Euclidean Space},
-	Url = {http://www.euclideanspace.com/maths/algebra/clifford/d3/basis/index.htm},
-	Urldate = {2012},
-	Year = {2012},
-	Bdsk-Url-1 = {http://www.euclideanspace.com/maths/geometry/space/euclidean/index.htm}}
-
-@book{joel2010,
-	Author = {Joel Franklin},
-	Date-Added = {2012-09-01 10:04:17 +0000},
-	Date-Modified = {2012-09-01 10:05:58 +0000},
-	Publisher = {Cambridge University Press},
-	Title = {Advanced Mechanics and General Relativity},
-	Year = {2010}}
-
-@book{lindner2011,
-	Author = {John F. Lindner},
-	Date-Added = {2012-08-30 23:11:39 +0000},
-	Date-Modified = {2012-08-30 23:12:37 +0000},
-	Publisher = {The College of Wooster -- Physics Department},
-	Title = {Electromagnetism with Spacetime Algebra},
-	Year = {2011}}
-
-@book{apostol11969,
-	Author = {Tom M. Apostol},
-	Date-Added = {2012-08-28 20:18:43 +0000},
-	Date-Modified = {2012-08-28 20:19:40 +0000},
-	Edition = {Second},
-	Publisher = {John Wiley and Sons},
-	Title = {Calculus -- One-variable Calculus with an Introduction to Linear Algebra},
-	Volume = {I},
-	Year = {1969}}
-
-@book{apostol21969,
-	Author = {Tom M. Apostol},
-	Date-Added = {2012-08-28 16:11:03 +0000},
-	Date-Modified = {2012-08-28 16:14:49 +0000},
-	Edition = {Second},
-	Publisher = {John Wiley and Sons},
-	Title = {Calculus -- Multi-Variable Calculus and Linear Algebra, with Applications to Differential Equations and Probabilty},
-	Volume = {II},
-	Year = {1969}}
-
-@booklet{hartl2010,
-	Author = {Michael Hartl},
-	Date-Added = {2012-08-27 20:38:05 +0000},
-	Date-Modified = {2012-08-27 20:39:08 +0000},
-	Month = {06},
-	Title = {The Tau Manifesto},
-	Year = {2010}}
-
-@webpage{kerth2003,
-	Author = {Leroy T. Kerth},
-	Date-Added = {2012-08-21 16:03:53 +0000},
-	Date-Modified = {2012-09-14 08:30:02 +0000},
-	Lastchecked = {2011-08-21},
-	Title = {Tensor or Component Notation for Vectors},
-	Url = {http://www.6911norfolk.com/d0lbln/105f06/kerth-tensor-notation.pdf},
-	Urldate = {9/15/03},
-	Year = {2003},
-	Bdsk-Url-1 = {http://www.6911norfolk.com/d0lbln/105f06/kerth-tensor-notation.pdf}}
-
-@url{denker2007,
-	Author = {John Denker},
-	Date-Added = {2012-08-21 15:59:37 +0000},
-	Date-Modified = {2012-08-21 16:01:10 +0000},
-	Lastchecked = {2011-08-21},
-	Title = {Fundamental Notions of Vectors},
-	Url = {http://www.av8n.com/physics/intro-vector.htm},
-	Year = {2007},
-	Bdsk-Url-1 = {http://www.av8n.com/physics/intro-vector.htm}}
-
-@book{knuth1994,
-	Author = {Ronald L. Graham and Donald E. Knuth and Oren Patashnik},
-	Date-Added = {2012-08-21 15:55:17 +0000},
-	Date-Modified = {2012-08-21 15:57:47 +0000},
-	Edition = {Second},
-	Publisher = {Addison-Wesley},
-	Title = {Concrete Mathematics - A Foundation for Computer Science},
-	Year = {1994}}
-
-@manual{mit2004,
-	Author = {Department of Physics},
-	Date-Added = {2012-08-21 15:32:31 +0000},
-	Date-Modified = {2012-08-21 15:39:56 +0000},
-	Month = {Fall},
-	Organization = {Massachutetts Institute of Technology},
-	Title = {Primer on Index Notation},
-	Year = {2004}}
+@article{berry:1995,
+	Author = {Michael Berry},
+	Date-Added = {2013-10-28 08:41:44 +0000},
+	Date-Modified = {2013-10-28 11:16:41 +0000},
+	Journal = {Annals of the New York Academy of Sciences},
+	Month = {April},
+	Title = {Two-State Quantum Asypmtotics},
+	Volume = {755},
+	Year = {1995}}
