--- a/transport/sections/continuity.tex
+++ b/transport/sections/continuity.tex
@@ -445,7 +445,7 @@ The last equation is the final result of dimensional analysis. The actual form o
 \end{dimensional}
 
 \begin{approximation}
-After dimensional analysis was carried away, we arrived to
+After dimensional analysis was carried out, we arrived to
 \beq
 \kthcond\left(\temp - \temp\txt w\right)/\flow\chthen l^2 = f\vat{x/l} \,.
 \eeq
