--- a/approximations/sections/abstract.tex
+++ b/approximations/sections/abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-Abstract goes here :)
+Only wimps specialize on the general case. Real scientists pursue examples. -- Beresford Parlett \citep{berry:1995}.
 \end{abstract}
