typos and edition

--- a/approximations/sections/energy.tex
+++ b/approximations/sections/energy.tex
@@ -42,7 +42,7 @@ Position within the slab             & $\pos$      & $\phdim L$ \\
 
 As seen in \cref{tab:settingslabquantities}, according to the Pi-theorem, $6 - 4 = 2$ dimensionless quantities can be constructed. The first one:
 \beq
-\kdim_1 = \dfrac{\kthcond\left(\temp - \wtemp\right)}{\then\length^2}\,,
+\kdim_1 = \dfrac{\kthcond\left(\temp - \wtemp\right)/\length^2}{\then}\,,
 \eeq
 which measures the relationship between energy conduction and energy production. The second dimensionless quantity:
 \beq
