--- a/modeling/sections/harmonic.tex
+++ b/modeling/sections/harmonic.tex
@@ -1,4 +1,7 @@
 \section{Simple harmonic motion}
+%
+\epigraph{Only wimps study the general case. Real scientists work through examples.}{Beresford Parlett}{?}
+%
 In this section, we present a small account of the simple harmonic motion of a spring-mass system -- a simple harmonic oscillator.
 
 
