--- a/approximations/sections/biblio.bib
+++ b/approximations/sections/biblio.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2013-10-28 12:16:41 +0100 
+%% Created for art at 2013-10-31 09:41:44 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{gibbings:2011,
+	Author = {J.C. Gibbings},
+	Date-Added = {2013-10-31 08:41:15 +0000},
+	Date-Modified = {2013-10-31 08:41:44 +0000},
+	Publisher = {Springer},
+	Title = {Dimensional Analysis},
+	Year = {2011}}
 
 @article{berry:1995,
 	Author = {Michael Berry},
