--- a/approximations/approximations.tex
+++ b/approximations/approximations.tex
@@ -1,3 +1,4 @@
+\RequirePackage[l2tabu, orthodox]{nag}
 \RequirePackage{fix-cm}
 \documentclass[9pt,a4paper,reqno]{amsart}
 
@@ -11,6 +12,7 @@
 \maketitle
 %\tableofcontents
 
+\input{./sections/intro}
 \input{./sections/pressure}
 \input{./sections/energy}
 
